--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
     "highlightjs": "^9.10.0",
     "marked": "^0.3.6",
     "mustache": "^2.3.0",
-    "ncp": "^2.0.0"
+    "ncp": "^2.0.0",
+    "request": "^2.81.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/*_test.js"
   },
   "author": "",
   "license": "ISC",
