--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "bin/ktek",
   "dependencies": {
     "commander": "^2.9.0",
+    "fs-extra": "^2.1.2",
     "highlightjs": "^9.10.0",
     "marked": "^0.3.6",
     "mustache": "^2.3.0",
-    "ncp": "^2.0.0",
     "request": "^2.81.0"
   },
   "devDependencies": {
