--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "A tool for generating Amazon Kindle-compatible HTML from markdown",
   "main": "bin/ktek",
   "dependencies": {
+    "async": "^2.3.0",
     "commander": "^2.9.0",
     "fs-extra": "^2.1.2",
     "highlightjs": "^9.10.0",
     "marked": "^0.3.6",
     "mustache": "^2.3.0",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "yamljs": "^0.2.10"
   },
   "devDependencies": {
     "chai": "^3.5.0",
